--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <header>
+        <!-- logo -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Nav bar -->
         <nav>
             <ul>
                 <li>
@@ -24,6 +26,7 @@
             </ul>
         </nav>
     </header>
+    <!-- Banner image -->
     <section class="hero"></section>
     <main>
         <section id="search-engine-optimization">
@@ -48,6 +51,7 @@
             </p>
         </section>
     </main>
+    <!-- Side bar -->
     <aside>
         <section>
             <h3>Lead Generation</h3>
@@ -71,6 +75,7 @@
             </p>
         </section>
     </aside>
+    <!-- Footer message and copyright -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
