--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
     <!-- Banner image -->
     <section class="hero"></section>
+    <!-- Main -->
     <main>
         <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
